java/operator/org.eclipse.theia.cloud.operator/src/main/resources/templateDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: placeholder-depname
  namespace: placeholder-namespace
  ownerReferences:
    - apiVersion: theia.cloud/v1beta9
      kind: AppDefinition
      name: placeholder
      uid: placeholder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: placeholder-app
  template:
    metadata:
      labels:
        app: placeholder-app
    spec:
      automountServiceAccountToken: false
      serviceAccountName: theia-cloud-sessions
      containers:
        - name: oauth2-proxy
          image: placeholder-oauth2-proxy-image:placeholder-oauth2-proxy-version
          imagePullPolicy: Always
          args:
            - --config=/etc/oauth2-proxy.cfg
            - --authenticated-emails-file=/emails/authenticated-emails-list
            - --gcp-healthchecks
            - --reverse-proxy
            - --skip-auth-route=/monitor/*
          ports:
            - containerPort: 5000
              name: web
          volumeMounts:
            - name: oauth2-proxy-config
              mountPath: /etc/oauth2-proxy.cfg
              subPath: oauth2-proxy.cfg
            - name: oauth2-templates
              mountPath: /templates
            - name: oauth2-emails
              mountPath: /emails
        - name: placeholder-definitionname
          image: placeholder-image
          imagePullPolicy: placeholder-pull-policy
          ports:
            - containerPort: placeholder-port
              name: application
            placeholder-monitor-port
          resources:
            limits:
              cpu: placeholder-cpu-limits
              memory: placeholder-memory-limits
            requests:
              cpu: placeholder-cpu-requests
              memory: placeholder-memory-requests
          securityContext:
            runAsUser: placeholder-uid
            runAsGroup: placeholder-uid
      securityContext:
        fsGroup: placeholder-uid
      volumes:
        - name: oauth2-proxy-config
          configMap:
            name: placeholder-configname
        - name: oauth2-templates
          configMap:
            name: oauth2-templates
        - name: oauth2-emails
          configMap:
            name: placeholder-emailsconfigname
