java/operator/org.eclipse.theia.cloud.operator/src/main/resources/templateDeploymentWithoutOAuthProxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: placeholder-depname
  namespace: placeholder-namespace
  ownerReferences:
    - apiVersion: theia.cloud/v1beta9
      kind: AppDefinition
      name: placeholder
      uid: placeholder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: placeholder-app
  template:
    metadata:
      labels:
        app: placeholder-app
    spec:
      automountServiceAccountToken: false
      serviceAccountName: theia-cloud-sessions
      # initContainers:
      # - name: wondershaper-init
      #   image: gcr.io/kubernetes-238012/theia-cloud-wondershaper
      #   securityContext:
      #     capabilities:
      #       add:
      #       - NET_ADMIN
      containers:
        - name: placeholder-definitionname
          image: placeholder-image
          imagePullPolicy: placeholder-pull-policy
          ports:
            - containerPort: placeholder-port
              name: application
            placeholder-monitor-port
          resources:
            limits:
              cpu: placeholder-cpu-limits
              memory: placeholder-memory-limits
            requests:
              cpu: placeholder-cpu-requests
              memory: placeholder-memory-requests
          securityContext:
            runAsUser: placeholder-uid
            runAsGroup: placeholder-uid
      securityContext:
        fsGroup: placeholder-uid
