java/operator/org.eclipse.theia.cloud.operator/src/main/resources/templateServiceWithoutOAuthProxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: placeholder-servicename
  labels:
    app: placeholder-app
  namespace: placeholder-namespace
  ownerReferences:
    - apiVersion: theia.cloud/v6beta
      kind: AppDefinition
      name: placeholder
      uid: placeholder
spec:
  ports:
    - name: http
      port: placeholder-port
      protocol: TCP
      targetPort: placeholder-port
    placeholder-monitor-port
  selector:
    app: placeholder-app
  type: ClusterIP
