java/operator/org.eclipse.theia.cloud.operator/src/main/resources/templateIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: placeholder-ingressname
  namespace: placeholder-namespace
  ownerReferences:
    - apiVersion: theia.cloud/v3alpha
      kind: Template
      name: placeholder
      uid: placeholder
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: placeholder-host
      http:
      #   paths:
      #     - path: /
      #       pathType: Prefix
      #       backend:
      #         service:
      #           name: cppservice
      #           port:
      #             number: 3000
