java/operator/org.eclipse.theia.cloud.operator/src/main/resources/templateRoute.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: placeholder-routename
  namespace: placeholder-namespace
spec:
  host: placeholder-hostname
  to:
    kind: Service
    name: placeholder-servicename
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
